# docs/swagger.json
@@ -9,6 +9,55 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
+        "/api/auth": {
+            "post": {
+                "description": "Аутентифицирует пользователя по заданному логину и паролю и возвращает JWT",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Аутентификация пользователя",
+                "parameters": [
+                    {
+                        "description": "Данные пользователя для входа",
+                        "name": "credentials",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.CredentialsRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Успешная аутентификация",
+                        "schema": {
+                            "$ref": "#/definitions/dto.AuthResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Неверный формат запроса",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ErrorResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Неверный логин или пароль",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Внутренняя ошибка сервера",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/api/reg": {
             "post": {
                 "description": "Создаёт нового пользователя с заданным логином и паролем",
@@ -21,18 +70,18 @@
                 "summary": "Зарегистрировать нового пользователя",
                 "parameters": [
                     {
-                        "description": "Данные пользователя",
+                        "description": "Данные пользователя для входа",
                         "name": "credentials",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.RegisterRequest"
+                            "$ref": "#/definitions/dto.CredentialsRequest"
                         }
                     }
                 ],
                 "responses": {
                     "201": {
-                        "description": "Пользователь успешно создан",
+                        "description": "Успешная регистрация",
                         "schema": {
                             "$ref": "#/definitions/dto.RegisterResponse"
                         }
@@ -54,21 +103,33 @@
         }
     },
     "definitions": {
-        "dto.ErrorResponse": {
+        "dto.AuthResponse": {
             "type": "object",
             "properties": {
-                "error": {
+                "token": {
                     "type": "string"
                 }
             }
         },
-        "dto.RegisterRequest": {
+        "dto.CredentialsRequest": {
             "type": "object",
+            "required": [
+                "login",
+                "password"
+            ],
             "properties": {
                 "login": {
                     "type": "string"
                 },
                 "password": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.ErrorResponse": {
+            "type": "object",
+            "properties": {
+                "error": {
                     "type": "string"
                 }
             }
