# internal/dto/request.go
@@ -1,6 +1,6 @@
 package dto
 
 type CredentialsRequest struct {
-	Login    string `json:"login"`
-	Password string `json:"password"`
+	Login    string `json:"login" binding:"required"`
+	Password string `json:"password" binding:"required"`
 }
