# internal/handlers/handler_register.go
@@ -35,10 +35,10 @@ type ApiConfig struct {
 // @Description Создаёт нового пользователя с заданным логином и паролем
 // @Accept      json
 // @Produce     json
-// @Param       credentials body     dto.RegisterRequest  true "Данные пользователя для входа"
-// @Success     201         {object} dto.RegisterResponse "Пользователь успешно создан"
-// @Failure     400         {object} dto.ErrorResponse    "Неверный формат запроса или логин уже используется"
-// @Failure     500         {object} dto.ErrorResponse    "Внутренняя ошибка сервера"
+// @Param       credentials body     dto.CredentialsRequest true "Данные пользователя для входа"
+// @Success     201         {object} dto.RegisterResponse   "Успешная регистрация"
+// @Failure     400         {object} dto.ErrorResponse      "Неверный формат запроса или логин уже используется"
+// @Failure     500         {object} dto.ErrorResponse      "Внутренняя ошибка сервера"
 // @Router      /api/reg [post]
 func (cfg *ApiConfig) HandlerRegister(c *gin.Context) {
 	inputCredentials := dto.CredentialsRequest{}
